--- a/task15/task15.html
+++ b/task15/task15.html
@@ -36,9 +36,10 @@
     var data = [];
     function getData() {
         for (i = 0; i < ul.childElementCount; i ++){
-            var li = ul.children[i].innerHTML;
-            var city = li.slice(0, 1);
-            var index = li.slice(-0, -1);
+            var li = ul.getElementsByTagName("li");
+            var city = li[i].innerText.slice(0,1);
+            var index = li[i].getElementsByTagName("b").innerText;
+            data[i] = [];
             data.push([city, index]);
         }
         return data;
@@ -66,8 +67,9 @@
     function render(data) {
         var rank = ["一", "二", "三", "四", "五", "六", "七"];
         for(i = 0; i < ul.childElementCount; i ++){
-            var ouput = "<li>" + "第" + rank[i] + "名：" + data[i] + "空气质量：" + data[i];
-            document.getElementById("resort").innerHTML = output;
+            var ouput =
+                    "<li>第" + rank[i] + "名：" + data[i][0] + "空气质量：<b></b>" + data[i][1] + "</li>";
+            document.getElementById("resort").innerHTML += output;
         }
     }
 
@@ -80,7 +82,7 @@
 
     function init() {
         // 在这下面给sort-btn绑定一个点击事件，点击时触发btnHandle函数
-        document.getElementById("sort-btn").onclick = btnHandle();
+        document.getElementById("sort-btn").onclick = btnHandle;
     }
 
     init();
