--- a/task15/task15.html
+++ b/task15/task15.html
@@ -33,16 +33,17 @@
      * 返回一个数组，格式见函数中示例
      */
     var ul = document.getElementById("source");
-    var data = [];
+    var aqiData = [];
     function getData() {
-        for (i = 0; i < ul.childElementCount; i ++){
+        for (var i = 0; i < ul.childElementCount; i ++){
             var li = ul.getElementsByTagName("li");
-            var city = li[i].innerText.slice(0,1);
-            var index = li[i].getElementsByTagName("b").innerText;
-            data[i] = [];
-            data.push([city, index]);
+            var city = li[i].innerText.slice(0,2);
+            var index = li[i].innerText.slice(-2);
+            index = Number(index);
+            aqiData.push([city, index]);
+            console.log(aqiData[i])
         }
-        return data;
+        return aqiData;
     }
     /**
      * sortAqiData
@@ -57,6 +58,8 @@
             else
                 return (a[1] > b[1])? 1:-1;
         }
+        console.log(data);
+        return data;
     }
 
     /**
@@ -66,9 +69,9 @@
      */
     function render(data) {
         var rank = ["一", "二", "三", "四", "五", "六", "七"];
-        for(i = 0; i < ul.childElementCount; i ++){
-            var ouput =
-                    "<li>第" + rank[i] + "名：" + data[i][0] + "空气质量：<b></b>" + data[i][1] + "</li>";
+        for(var i = 0; i < ul.childElementCount; i ++){
+            var output =
+                    "<li>第" + rank[i] + "名：" + data[i][0] + "  空气质量：<b>" + data[i][1] + "</b></li>";
             document.getElementById("resort").innerHTML += output;
         }
     }
