--- a/task18/index.html
+++ b/task18/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="task18.js"></script>
 </head>
 <body>
-<input id="numIn">
+<input id="numIn" type="number">
 <button id="leftIn" onclick="leftIn()">左侧进</button>
 <button id="rightIn" onclick="rightIn()">右侧进</button>
 
 <button id="leftOut" onclick="leftOut()">左侧出</button>
 <button id="rightOut" onclick="rightOut()">右侧出</button>
 
-
+<div id="chart"></div>
 
 </body>
 </html>
