--- a/task18/index.html
+++ b/task18/index.html
@@ -7,7 +7,7 @@
     <script src="task18.js"></script>
 </head>
 <body>
-<input id="numIn" type="number">
+<input id="numIn">
 <button id="leftIn" onclick="leftIn()">左侧进</button>
 <button id="rightIn" onclick="rightIn()">右侧进</button>
 
