Basic function finished, need to improve ui.

--- a/task17/index.html
+++ b/task17/index.html
@@ -4,24 +4,22 @@
     <meta charset="utf-8">
     <title>IFE JavaScript Task 01</title>
     <script src="task17.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <fieldset id="form-gra-time">
     <legend>请选择日期粒度：</legend>
-    <label>日<input name="gra-time" value="day" type="radio" checked="checked"
-                   onclick="graTimeChange(this.value)"></label>
-    <label>周<input name="gra-time" value="week" type="radio"
-                   onclick="graTimeChange(this.value)"></label>
-    <label>月<input name="gra-time" value="month" type="radio"
-                   onclick="graTimeChange(this.value)"></label>
+    <label>日<input name="gra-time" value="day" type="radio" checked="checked"></label>
+    <label>周<input name="gra-time" value="week" type="radio"></label>
+    <label>月<input name="gra-time" value="month" type="radio"></label>
 </fieldset>
 
 <fieldset>
     <legend>请选择查看的城市：</legend>
-    <select id="city-select" onchange="citySelectChange()"> </select>
+    <select id="city-select" onchange="citySelectChange(this)"></select>
 </fieldset>
 
-<div class="aqi-chart-wrap">
+<div id="aqi-chart-wrap" >
 </div>
 </body>
 </html>
